# ai-contract-checker

./: .env.example  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ai-tests.yml  api-build.yml
apps/ai/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
apps/ai/src/ai/: main.py
apps/ai/tests/: test_health.py
apps/api/: .dockerignore  Dockerfile  eslint.config.mjs  tsconfig.json
apps/api/src/: main.ts
apps/api/src/controllers/: index.ts
apps/api/src/modules/: app.module.ts  index.ts
apps/api/src/services/: index.ts
