[project]
name = "ai"
version = "0.1.0"
description = "AI service for contract checking (FastAPI + OpenAI)"
authors = [
    { name = "AlexisBalayre", email = "alexis@balayre.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "openai (>=1.100.2,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "ai", from = "src" }]

[tool.poetry.scripts]
ai-server = "ai.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
